# storage/api-docs/api-docs.json
@@ -161,192 +161,6 @@
                 ]
             }
         },
-        "/api/master-desa/{kodeBps}": {
-            "get": {
-                "tags": [
-                    "Master Data"
-                ],
-                "summary": "Get Master Desa by Kode BPS",
-                "description": "Returns a single master desa record by kode_bps",
-                "operationId": "e5397b941754e3ed96e6d6fbde4d20fa",
-                "parameters": [
-                    {
-                        "name": "kodeBps",
-                        "in": "path",
-                        "description": "Kode BPS",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "string",
-                                            "example": "success"
-                                        },
-                                        "data": {
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Data not found",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "string",
-                                            "example": "error"
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Data not found"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/master-kako/{kodeBps}": {
-            "get": {
-                "tags": [
-                    "Master Data"
-                ],
-                "summary": "Get Master Kabupaten/Kota by Kode BPS",
-                "description": "Returns a single master kabupaten/kota record by kode_bps",
-                "operationId": "94757bd8527af490b7691c9329c2e388",
-                "parameters": [
-                    {
-                        "name": "kodeBps",
-                        "in": "path",
-                        "description": "Kode BPS",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "string",
-                                            "example": "success"
-                                        },
-                                        "data": {
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Data not found",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "string",
-                                            "example": "error"
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Data not found"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/api/master-kec/{kodeBps}": {
-            "get": {
-                "tags": [
-                    "Master Data"
-                ],
-                "summary": "Get Master Kecamatan by Kode BPS",
-                "description": "Returns a single master kecamatan record by kode_bps",
-                "operationId": "222746e8244d1840f250fe8553fa3278",
-                "parameters": [
-                    {
-                        "name": "kodeBps",
-                        "in": "path",
-                        "description": "Kode BPS",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "string",
-                                            "example": "success"
-                                        },
-                                        "data": {
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Data not found",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status": {
-                                            "type": "string",
-                                            "example": "error"
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Data not found"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/api/subsls": {
             "get": {
                 "tags": [
@@ -684,10 +498,6 @@
         {
             "name": "Auth",
             "description": "Auth"
-        },
-        {
-            "name": "Master Data",
-            "description": "Master Data"
         },
         {
             "name": "Subsls",
